[project]
name = "claude-decoder"
version = "0.2.0"
description = "Extract and recover file operations from Claude Code session logs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
claude-decoder = "claude_decoder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_decoder"]
